[tool.poetry]
name = "beauty-models"
version = "0.1.0"
description = ""
authors = ["Serhii Lakodei <serhii.lakodei@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
alembic = "^1.13.1"
sqlalchemy = "^2.0.25"
geoalchemy2 = "^0.14.3"
psycopg2-binary = "^2.9.9"

[tool.poetry.group.dev.dependencies]
black = "^24.1.1"
darglint = "^1.8.1"
flake8 = "^7.0.0"
flake8-bandit = "^4.1.1"
flake8-comprehensions = "^3.14.0"
flake8-eradicate = "^1.5.0"
flake8-isort = "^6.1.1"
flake8-spellcheck = "^0.28.0"
bandit = "^1.7.7"
isort = "^5.13.2"
mypy = "^1.8.0"
pep8-naming = "^0.13.3"
pre-commit = "^3.6.0"
pre-commit-hooks = "^4.5.0"
pytype = "^2024.1.24"
safety = "^3.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ['py310']
line-length = 120
skip-string-normalization = true
exclude = '''
(
    | .+/migrations
)
'''

[tool.isort]
profile = "black"
force_single_line=true
order_by_type=false
line_length = 120
skip = 'migrations'
src_paths = ['apps', 'settings']